[package]
name = "acker"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mripard/acker/"
description = "Tool to send review tags on mailing lists"
keywords = ["linux", "mailing-lists", "contribution"]
categories = ["command-line-utility", "development-tools", "email"]
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
gix-config = "0.35.0"
home = "0.5.5"
lettre = { version = "0.11.1", features = ["sendmail-transport"] }
mail-parser = "0.9.1"
